<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome_gradient"
        tools:context=".ui.fragments.LoginFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_edit_layout"
            style="@style/EditTextStyle"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edit_layout"
            style="@style/EditTextStyle"
            android:layout_marginTop="@dimen/top_margin"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/password_edit_layout"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_layout" />

        <TextView
            android:id="@+id/create_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="@+id/password_edit_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>